--- a/WebContent/add_course.xhtml
+++ b/WebContent/add_course.xhtml
@@ -23,7 +23,7 @@
             <h:inputText value = "#{course.duration}"/>
             <f:facet name = "footer">
                <h:panelGroup style = "display:block; text-align:center">
-                  <h:commandButton id = "submit" type="submit" value = "Add" action="index">
+                  <h:commandButton id = "submit" type="submit" value = "Add" action="list_courses">
                   	<f:actionListener binding="#{courseController.addCourse(course)}" />
                   </h:commandButton>
                </h:panelGroup>
