--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en"
+<h:html lang="en"
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 	
-<h:head>
-	<title>DCW Project 2018/19</title>
-	<h:outputStylesheet library="css" name="styles.css"  />
-</h:head>
-<h:body>
-	<h:link value="Manage Courses" outcome="list_courses"/>
-	<br/>
-	<h:link value="Manage Students" outcome="list_students"/>
-</h:body>
-</html>
+	<h:head>
+		<title>DCW Project 2018/19</title>
+		<h:outputStylesheet library="css" name="styles.css"  />
+	</h:head>
+	<h:body>
+		<h:link value="Manage Courses" outcome="list_courses"/>
+		<br/>
+		<h:link value="Manage Students" outcome="list_students"/>
+	</h:body>
+</h:html>
