--- a/WebContent/list_courses.xhtml
+++ b/WebContent/list_courses.xhtml
@@ -30,7 +30,7 @@
             </h:column>
             <h:column>
                <f:facet name = "header">Action</f:facet>
-               <h:link value="Sohw students" outcome="list_students"/>
+               <h:link value="Sohw students" outcome="course_student_details"/>
                <h:link value="Delete" outcome="list_courses"/>
             </h:column>
          </h:dataTable>
