--- a/WebContent/list_students.xhtml
+++ b/WebContent/list_students.xhtml
@@ -11,29 +11,27 @@
 	<h:body>
 		<h3>Course Student Details</h3>
       <h:form>
+      	<h:commandButton value="Add Student" action="add_student"></h:commandButton>
          <h:dataTable value="#{studentController.getStudents()}" var = "student"
          	styleClass="table"
          	headerClass = "table-header"
             rowClasses = "table-odd-row,table-even-row">        
             <h:column>    				
+               <f:facet name = "header">Student ID</f:facet>
+               #{student.sid}
+            </h:column>
+            <h:column>
                <f:facet name = "header">Course ID</f:facet>
                #{student.cid}
             </h:column>
-            <h:column>
-               <f:facet name = "header">Course name</f:facet>
-               
-            </h:column>
-            <h:column>
-               <f:facet name = "header">Course duration</f:facet>
-               
-            </h:column>
              <h:column>
-               <f:facet name = "header">Student name</f:facet>
+               <f:facet name = "header">Name</f:facet>
                #{student.name}
             </h:column>
-             <h:column>
-               <f:facet name = "header">Student address</f:facet>
-               #{student.address}
+            <h:column>
+               <f:facet name = "header">Action</f:facet>
+               <h:link value="All details" outcome="list_students"/>
+               <h:link value="Delete" outcome="list_courses"/>
             </h:column>
          </h:dataTable>
       </h:form>
